fix: spacing of footer, add: thumb components

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,53 +2,60 @@
   margin: 0;
 }
 
-.footer{
+.footer {
   background-color: var(--bg-dark-2);
   position: relative;
   bottom: 0;
   padding: 4rem 0;
 }
 
-.footer a{
+.footer a {
   color: var(--text-color-3);
 }
 
-.footer .info{
+.footer .info {
   background-color: gray;
   border-radius: .25rem;
 }
 
-.footer .info img{
+.footer .info img {
   border-radius: 50%;
   width: 10rem;
 }
 
-.footer .links p{
+.footer .links p {
   line-height: 2rem;
 }
 
-.footer .devs p{
+.footer .devs p {
   line-height: 2rem;
 }
 
-.footer .who-are-we{
+.footer .who-are-we {
+  width: 40rem;
   border-right: 1px solid #575757;
 }
 
-.footer .contact{
+.footer .contact {
   margin-left: 10rem;
 }
 
-.footer .contact form{
+.footer .contact form {
   background-color: #D9D9D9;
-}
-
-.footer input,
-.footer textarea{
   border-radius: .25rem;
 }
 
-.footer .contact input{
+.footer input,
+.footer textarea {
+  border-radius: .25rem;
+  padding-left: 1rem;
+}
+
+.footer textarea {
+  padding-top: .5rem;
+}
+
+.footer .contact input {
   height: 2.25rem;
 }
 
